activity stats (with fake stats)

--- a/src/main/webapp/common.css
+++ b/src/main/webapp/common.css
@@ -11,6 +11,10 @@ md-content {
 	padding:20px;
 }
 
+.md-content-padded-small {
+	padding:8px;
+}
+
 md-item.md-item-padded > md-item-content{
 	padding:12px;
 }
