sidebar close/click fix

--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -1,29 +1,29 @@
-<a ng-href="/#/project/{{routeParams.projectId}}/tasks" class="menu-item" route-active="['task-list','task-edit']" ng-click="closeSidebar()" md-ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/tasks" class="menu-item" route-active="['task-list','task-edit']" md-ink-ripple>
 	<i class="mdi-view-list mdi-lg"></i>
 	<span>Tasks</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectId}}/files" class="menu-item" route-active="'file-list'" ng-click="closeSidebar()" md-ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/files" class="menu-item" route-active="'file-list'" md-ink-ripple>
 	<i class="mdi-folder-shared mdi-lg"></i>
 	<span>Files</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectId}}/meetings" class="menu-item" route-active="['meeting-list','meeting-edit']" ng-click="closeSidebar()" md-ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/meetings" class="menu-item" route-active="['meeting-list','meeting-edit']" md-ink-ripple>
 	<i class="mdi-event mdi-lg"></i>
 	<span>Meetings</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectId}}/discussions" class="menu-item" route-active="'discussions'" ng-click="closeSidebar()" md-ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/discussions" class="menu-item" route-active="'discussions'" md-ink-ripple>
 	<i class="mdi-forum mdi-lg"></i>
 	<span>Discussions</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectId}}/members" class="menu-item" route-active="'member-list'" ng-click="closeSidebar()" md-ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/members" class="menu-item" route-active="'member-list'" md-ink-ripple>
 	<i class="mdi-group mdi-lg"></i>
 	<span>Members</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectId}}/activity" class="menu-item" route-active="'activity'" ng-click="closeSidebar()" md-ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/activity" class="menu-item" route-active="'activity'" md-ink-ripple>
 	<i class="mdi-flash-on mdi-lg"></i>
 	<span>Activity</span>
 </a>
