--- a/src/main/webapp/components/activity/list.html
+++ b/src/main/webapp/components/activity/list.html
@@ -7,7 +7,7 @@
 			<md-divider></md-divider>
 			<div layout="row" layout-align="center center" class="md-content-padded-small" style="text-align: center;">
 				<div class="md-content-padded-small">
-					<h2 style="margin:0">{{hasAnalytics('PROJECT_TIMESPAN_END') && hasAnalytics('PROJECT_TIMESPAN_END') ? ((analytics.metrics.PROJECT_TIMESPAN_END - analytics.metrics.PROJECT_TIMESPAN_START)/86400000) : '&mdash;'}}</h2>
+					<h2 style="margin:0">{{hasAnalytics('PROJECT_TIMESPAN_END') && hasAnalytics('PROJECT_TIMESPAN_END') ? ((analytics.metrics.PROJECT_TIMESPAN_END - analytics.metrics.PROJECT_TIMESPAN_START)/86400000 | number:0) : '&mdash;'}}</h2>
 					<small>days</small>
 				</div>
 				<div class="md-content-padded-small" layout="row" layout-gt-md="column" layout-align="center center" flex style="font-size:13px;">
@@ -50,7 +50,7 @@
 			<md-divider></md-divider>
 			<div class="md-content-padded-small" flex>
 				<table flex>
-					<tr><td class="stats-metric-value"><b>{{hasAnalytics('TASK_AVG_COMPLETE_TIME') ? analytics.metrics.TASK_AVG_COMPLETE_TIME : '&mdash;'}}</b></td><td><b>days</b> avg time to complete a task</td></tr>
+					<tr><td class="stats-metric-value"><b>{{hasAnalytics('TASK_AVG_COMPLETE_TIME') ? (analytics.metrics.TASK_AVG_COMPLETE_TIME/86400000 | number:0) : '&mdash;'}}</b></td><td><b>days</b> avg time to complete a task</td></tr>
 				</table>
 			</div>
 		</md-content>
